--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
 /Personas/nbproject/private/
+/Saludo/nbproject/private/
+/Saludo/build/
+/Ejemplo14Junio/nbproject/private/
+/Ejemplo14Junio/build/
+/Registro/nbproject/private/
+/Registro/build/
+/ControlRecarga/nbproject/private/
+/ControlRecarga/build/
+/EjemploSesion8/nbproject/private/
+/EjemploSesion8/build/
+/Empresa/nbproject/private/
+/Empresa/build/
