CRUD Ejemplo Proyecto Final

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@
 /EjemploSesion8/build/
 /Empresa/nbproject/private/
 /Empresa/build/
+/Juego/nbproject/private/
+/ProyectoFinal/nbproject/private/
+/ProyectoFinal/build/
+/ProyectoFinal/dist/
